# ppd_forms

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  backend-start.sh  docker-compose-local.yml  mkdocs.yml  profiles.csv  pyproject.toml  requirements.txt  worker-start.sh  worker.Dockerfile
alembic/: env.py  script.py.mako
alembic/versions/: 04add837fd0f_initial_migration.py  5cf3dc6f88fd_initial_migration.py  86d7145ffcc8_initial_migration.py  db77d68badaf_first_migration.py
app/: __main__.py  initial_data.py  lifespan.py  main.py  ofm_pre_start.py  test.py  worker.py
app/api/: enums.py  mappings.py  routers.py  validators.py
app/api/config/: main.py
app/api/config/models/: api.py  auth.py  basic.py  ldap.py
app/api/config/yaml/: reports.yaml  tables.yaml
app/api/dependencies/: __init__.py  auth.py  db.py  file_lock.py  job.py  oauth2.py  pagination.py  path.py  redis.py  session.py  settings.py  tracker.py
app/api/dependencies/dao/: provider.py
app/api/dependencies/job/: __init__.py  create.py  current.py  current_job.py  depot.py  job_depot.py  new_job.py  response.py  tracker.py
app/api/dependencies/redis/: provider.py
app/api/dependencies/responses/: __init__.py  database.py  excel.py  fields.py  job.py  oil_loss.py  report.py  reservoirs.py
app/api/dependencies/tasks/: __init__.py  database.py  excel.py  report.py
app/api/dependencies/user/: __init__.py  directory.py  file.py
app/api/endpoints/: __init__.py  auth.py  database.py  excel.py  home.py  job.py  report.py  uneft.py  users.py  websocket.py
app/api/middlewares/: __init__.py  context.py  structlog.py
app/api/models/responses/: __init__.py  base.py  job.py  task.py
app/api/routes/: routers.py
app/api/utils/: auth.py  dateutil.py  exceptions.py  redirect.py  tracker.py  upload_file.py  validators.py
app/api/validators/: validators.py
app/common/config/: main.py
app/common/config/models/: paths.py
app/core/: base.py  config.py  init_db.py  local_db.py  migration_types.py  ofm_db.py  utils.py
app/core/config/: dsn.py  main.py  settings.py
app/core/config/models/: app.py  mmb.py
app/core/config/parsers/: file_reader.py  logging_config.py
app/core/config/yaml/: logging.yaml  mmb.yaml  reports.yaml
app/core/models/dto/: __init__.py
app/core/models/enums/: __init__.py  exclude_gtm.py  file_extension.py  interpolation.py  job_status.py  load_mode.py  loss_choice.py  report_name.py  table_name.py  task_id.py  uneft_assets.py  well_stock.py  well_test.py
app/core/models/schemas/: __init__.py  date_range.py  excel_path.py  fnv_params.py  inj_loss.py  matbal_params.py  matrix_effect.py  mmb_params.py  on_date.py  owc_resp_params.py  prolong_params.py  task_response.py  well_test_params.py
app/core/services/: date_range.py  fnv_report.py  init_db.py  init_mapper.py  matrix_report.py  oil_loss_report.py  opp_per_year_report.py  profile_report.py  uneft.py
app/core/services/cron/: clean_files.py  refresh_table.py
app/core/services/entrypoints/: arq.py  db.py  mapper.py  registry.py
app/core/services/fnv/: config.py  context.py  report.py
app/core/services/reports/: __init__.py  compensation.py  fnv.py  inj_loss.py  matbal.py  matrix.py  mmb.py  oil_loss.py  opp_per_year.py  owc_resp.py  profile.py  (+2 more)
app/core/unify/: layer_mapper.py  regex_mapper.py  simple_mapper.py  well_mapper.py
app/core/utils/: exceptions.py  job_manager.py  process_pool.py  result_path.py  save_dataframe.py
app/crud/: base.py  monthly_report.py  well_profile.py
app/infrastructure/: holder.py  provider.py
app/infrastructure/log/: main.py  processors.py
app/infrastructure/redis/: dao.py  factory.py
app/infrastructure/utils/: convert_to_xlsx.py
app/models/: local.py  mixins.py  monthly_report.py  ofm.py  types.py  utility.py  well_profile.py
app/schemas/: database.py  replace.py  validators.py  well_profile.py
app/services/: profile_report.py  save_dataframe.py
app/static/: main.css  main.js
app/static/core/: assign.js  status.js
app/static/css/: main.css
app/static/javascript/: main.js
app/static/reports/: load.js
app/static/tables/: dates.js  update.js
app/templates/: base.html  footer.html  home.html
app/templates/auth/: login.html  logout.html
app/templates/includes/: footer.html  header.html  progress.html
app/templates/macros/: accordion.html  forms.html  paginator.html
app/templates/reports/: report_list.html
app/templates/results/: result_list.html
app/templates/tables/: table_list.html
app/unify/: base_mapper.py  init_mapper.py  layer_mapper.py  regex_mapper.py  simple_mapper.py  well_mapper.py
data/: field_replace.csv  layers.csv  reservoirs.csv
docs/: README.html  README.md  index.md
docs/app/: index.md  local.md
docs/app/reports/: compensation.md  fnv.md  inj_loss.md  matbal.md  matrix.md  mmb.md  oil_loss.md  opp_per_year.md  owc_resp.md  profile.md  prolong.md  well_test.md
docs/assets/templates/: matrix.xlsx  mmb.xlsx  prolong.xlsx
docs/css/: markdown-pdf.css
docs/stylesheets/: extra.css
nginx/: nginx.conf
pgadmin/: Dockerfile  servers-template.json
scripts/: backend-start.sh  migration-start.sh  worker-start.sh
tests/: conftest.py
tests/fixtures/: job_fixtures.py  mappers.py  response_constants.py  response_fixtures.py  task_fixtures.py  worker_constants.py  worker_fixtures.py
tests/fixtures/resources/: well_profile.csv
tests/integration/: conftest.py  test_loads.py  test_reports.py
tests/integration/api/: conftest.py  test_auth.py  test_database.py  test_excel.py  test_files.py  test_home.py  test_jobs.py  test_reports.py  test_tasks.py  test_uneft.py  test_urls.py  test_users.py  test_websockets.py
tests/integration/websocket/: conftest.py  test_job_tracking.py
tests/mocks/: excel_dao.py  holder.py  ofm_dao.py  reporters.py  response.py  responses.py  uneft.py
tests/unit/mapper/: conftest.py  test_base_mapper.py  test_layer_mapper.py  test_regex_mapper.py  test_simple_mapper.py  test_well_mapper.py
tests/utils/: session_cookie.py
(+381 files in other folders)
